added total stars calculation

--- a/index.html
+++ b/index.html
@@ -12,29 +12,34 @@
     <div class="container">
       <div class="star-container">
         <h1>Eat Breakfast</h1>
-        <button class="add">+</button>
-        <div class="star active">⭐</div>
+        <button class="add">Add/Remove Star</button>
+        <div class="star">⭐</div>
       </div>
       <div class="star-container">
         <h1>Eat Lunch</h1>
-        <button class="add">+</button>
+        <button class="add">Add/Remove Star</button>
         <div class="star">⭐</div>
       </div>
       <div class="star-container">
         <h1>Eat Dinner</h1>
-        <button class="add">+</button>
+        <button class="add">Add/Remove Star</button>
         <div class="star">⭐</div>
       </div>
       <div class="star-container">
         <h1>Letters</h1>
-        <button class="add">+</button>
+        <button class="add">Add/Remove Star</button>
         <div class="star">⭐</div>
       </div>
       <div class="star-container">
         <h1>Read Books</h1>
-        <button class="add">+</button>
+        <button class="add">Add/Remove Star</button>
         <div class="star">⭐</div>
       </div>
+    </div>
+    <br />
+    <br />
+    <div class="total-container">
+      <h1 class="total">Total Stars: 0</h1>
     </div>
 
     <script src="script.js"></script>
