added form to add additional tasks

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
   </head>
   <body>
     <h1 class="title">Star Reward System</h1>
+
+    <br />
+    <br />
+
+    <div class="form-container">
+      <form>
+        <input type="text" id="new-chore" />
+        <label for="new-chore"></label>
+        <button type="submit" class="submit">Add Chore</button>
+      </form>
+    </div>
+
+    <br />
+    <br />
+
     <div class="container">
       <div class="star-container">
         <h1>Eat Breakfast</h1>
