--- a/index.html
+++ b/index.html
@@ -24,33 +24,7 @@
     <br />
     <br />
 
-    <div class="container">
-      <div class="star-container">
-        <h1>Eat Breakfast</h1>
-        <button class="add">Add/Remove Star</button>
-        <div class="star">⭐</div>
-      </div>
-      <div class="star-container">
-        <h1>Eat Lunch</h1>
-        <button class="add">Add/Remove Star</button>
-        <div class="star">⭐</div>
-      </div>
-      <div class="star-container">
-        <h1>Eat Dinner</h1>
-        <button class="add">Add/Remove Star</button>
-        <div class="star">⭐</div>
-      </div>
-      <div class="star-container">
-        <h1>Letters</h1>
-        <button class="add">Add/Remove Star</button>
-        <div class="star">⭐</div>
-      </div>
-      <div class="star-container">
-        <h1>Read Books</h1>
-        <button class="add">Add/Remove Star</button>
-        <div class="star">⭐</div>
-      </div>
-    </div>
+    <div class="container"></div>
     <br />
     <br />
     <div class="total-container">
