added ability to remove a chore from the list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Star System</title>
   </head>
   <body>
-    <h1 class="title">Star Reward System</h1>
+    <h1 class="title">⭐Star Reward System⭐</h1>
 
     <br />
     <br />
